<resources>
    <string name="app_name">JustOnce</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="signup">If not registered then signup here</string>
    <string name="myname">Name</string>
    <string name="age">Age</string>
    <string name="number">Contact Number</string>
    <string name="register">Register</string>
    <string name="userLogin">Login as User</string>
    <string name="managerLogin">Login as Manager</string>
    <string name="logout">Logout</string>
    <string name="registerEvent">Register for Event</string>
    <string name="unregisterEvent">Unregister for Event</string>
</resources>
