<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <EditText
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />

    <EditText
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="loginUser"/>

    <TextView
        android:textAlignment="center"
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/signup"
        android:onClick="goToSignUp"/>


</LinearLayout>


